--- a/force-app/main/default/classes/CTLocationController.cls
+++ b/force-app/main/default/classes/CTLocationController.cls
@@ -1,5 +1,41 @@
 public with sharing class CTLocationController {
-    public CTLocationController() {
+    public static List<Location__c> getRecentStatusChanges(){
+        // query location records all fields, limit 100
+        // sort by status update desc
+        // return list locations
+        return [SELECT Id, Address__c, Pincode__c, Red_Score__c, Status_Update_Date__c, Status__c
+                FROM Location__c 
+                ORDER BY Status_Update_Date__c DESC NULLS LAST
+                LIMIT 100];
 
+    }
+
+    public static List<Location__c> searchLocations(String searchTerm){
+        // query all fields where name, pincode, address matches searchTerm
+        // sort by status update desc
+        // return list
+        searchTerm = searchTerm + '%';
+        return [SELECT Id, Address__c, Pincode__c, Red_Score__c, Status_Update_Date__c, Status__c
+                FROM Location__c
+                WHERE Name LIKE :searchTerm
+                OR Pincode__c LIKE :searchTerm
+                OR Address__c LIKE :searchTerm
+                ORDER BY Status_Update_Date__c DESC NULLS LAST];
+        
+    }
+
+    public static Location__c getLocationById(String locationId){
+        // query one location record  where ID matches locationId
+        // return record
+        List<Location__c> locations = [SELECT Id 
+                                        FROM Location__c
+                                        WHERE Id = :locationId];
+        
+        if (locations != null && locations.size() > 0) {
+            return locations[0];   
+        } else {
+            return null; 
+        }
+        
     }
 }
